Start adding support for url sources for LoRA and TI embeddings
